deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laboratorio-mafe
  namespace: lab-mafe-ci-cd
  labels:
    app: laboratorio-mafe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laboratorio-mafe
  template:
    metadata:
      labels:
        app: laboratorio-mafe
    spec:
      containers:
        - name: laboratorio-mafe
          image: 338287058401.dkr.ecr.us-west-2.amazonaws.com/laboratorio_mafe:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: laboratorio-mafe-service
  namespace: lab-mafe-ci-cd
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
  selector:
    app: laboratorio-mafe

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laboratorio-mafe
  namespace: lab-mafe-ci-cd
spec:
  ingressClassName: ngrok
  rules:
    - host: ec78-2800-484-9e75-1100-779-2b8a-a5f2-6ae9.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laboratorio-mafe-service
                port:
                  number: 8443
